deploy/k8s/portfolio-drupal-app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-drupal-app
spec:
  selector:
    matchLabels:
      app: portfolio-drupal-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: portfolio-drupal-app
    spec:
      containers:
        - name: php-fpm
          image: wodby/drupal-php:7.4
          resources:
            requests:
              cpu: 100m
              memory: 100M
            limits:
              cpu: 2000m
              memory: 4000M
          volumeMounts:
            - name: portfolio-drupal-files
              mountPath: /var/www/html/web/sites/default/files
            - name: portfolio-drupal-secret
              mountPath: /var/www/html/web/sites/default/settings.php
              subPath: settings.php
            - name: portfolio-drupal-code
              mountPath: "/var/www/html"
            - name:  portfolio-drupal-secret
              mountPath: /var/www/html/config/sync/build_hooks.frontend_environment.circle_ci_gatsby.yml
              subPath: build_hooks.frontend_environment.circle_ci_gatsby.yml
        - name: nginx
          image: wodby/nginx:1.16
          resources:
            requests:
              cpu: 100m
              memory: 100M
            limits:
              cpu: 2000m
              memory: 4000M
          volumeMounts:
            - name: portfolio-drupal-files
              mountPath: /var/www/html/web/sites/default/files
            - name: portfolio-drupal-code
              mountPath: "/var/www/html"
            - name:  portfolio-drupal-secret
              mountPath: /var/www/html/config/sync/build_hooks.frontend_environment.circle_ci_gatsby.yml
              subPath: build_hooks.frontend_environment.circle_ci_gatsby.yml
      volumes:
        - name: portfolio-drupal-files
          persistentVolumeClaim:
            claimName: portfolio-drupal-app-files-pvc
        - name: portfolio-drupal-secret
          secret:
            secretName: portfolio-drupal-secret
        - name: portfolio-drupal-code
          emptyDir: {}
