deploy/k8s/portfolio-drupal-mariadb-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-drupal-mariadb
spec:
  selector:
    matchLabels:
      app: portfolio-drupal-mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: portfolio-drupal-mariadb
    spec:
      containers:
        - image: mariadb:10
          name: mariadb
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: portfolio-drupal-mariadb-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: portfolio-drupal-mariadb-persistent-storage
          persistentVolumeClaim:
            claimName: portfolio-drupal-mariadb-pvc
