deploy/k8s/portfolio-drupal-mariadb-pma-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-drupal-phpmyadmin
  labels:
    app: portfolio-drupal-phpmyadmin
spec:
  replicas: 0
  selector:
    matchLabels:
      app: portfolio-drupal-phpmyadmin
  template:
    metadata:
      labels:
        app: portfolio-drupal-phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin/phpmyadmin
          ports:
            - containerPort: 80
