deploy/k8s/portfolio-drupal-app-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-drupal-app-svc
  namespace: default
spec:
  ports:
    - name: nginx
      port: 80
  selector:
    app: portfolio-drupal-app
