deploy/k8s/portfolio-drupal-mariadb-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-drupal-mariadb
spec:
  ports:
    - port: 3306
  selector:
    app: portfolio-drupal-mariadb
  clusterIP: None
